# sad-ar5-vigilancia-costeira

./: .dockerignore  .gitignore  CHANGELOG.md  CHECKLIST_DEFESA.md  DEMONSTRACAO.md  FICHEIROS.md  LICENSE  MELHORIAS.md  NOTAS_ENTREGA.md  README.md  README_PIPELINE.md  RELEASE_v1.0-final.md  gerar_docx_diff.py  gerar_siga_final.sh  gerar_sigavi_final.sh  pyproject.toml  requirements.txt  setup-python.sh
dados/: README.md
notebooks/: _build_nb.py  analise_sad_ar5.ipynb  notebook_final.ipynb
plataforma/: .env.example  .gitignore  APRESENTACAO.md  ARCHITECTURE.md  ARRANQUE-MACOS.md  ARRANQUE-WINDOWS.md  Dockerfile  INICIAR.bat  PLANO_PATRULHAS.md  README.md  diagnostico-win.ps1  docker-compose.yml  setup-mac.sh  setup-win.ps1  setup.sh  start-api.sh  start-docker.ps1  start-docker.sh  start-mac.sh  start-web.sh  start-win.ps1  start.sh  stop-docker.sh  stop-mac.sh  stop-win.ps1
relatorio/: Relatorio_SAD_AR5.docx  Relatorio_SAD_AR5.md  Relatório Final.docx  SIGAVI_FINAL.docx  SIGA_FINAL.docx  Secao_6_Painel_Plataforma.docx  Tabela_TEKEVER_AR5.docx  Trabalho Final SAD - ALTERACOES.docx
resultados/: README.md  ahp_pesos.json  camadas_mapa.json  demo_navios.json  frota_vs_k_notebook.csv  manifest.json  mapa_interativo.html  resultados.json  resumo_cenarios.csv  resumo_cenarios_notebook.csv  resumo_validacao_notebook.csv  validacao.json
scripts/: NOTAS_ENTREGA.md  gerar_manifest.py  gerar_sigavi_final.sh  regenerar_intensidades.py  verificar_integridade.py
src/: apreensoes_mapa.py  atualizar_relatorio_20.py  condensar_relatorio_apa.py  config.py  figura_plataforma.py  (+15 more)
(+86 files in other folders)
